footnote on mobile fix

--- a/app/css/components/_footnote.scss
+++ b/app/css/components/_footnote.scss
@@ -77,6 +77,13 @@
     background: none;
     background-color: $color-white;
     z-index: 100;
+
+  @include breakpoint("mobile") {
+      padding: 10px 30px 12px 17px;
+
+  }
+
+
     &:hover{
         background: none;
         background-color: $color-white;
